# LAview.Object-Example

./: CMakeLists.txt  README  valadoc_env
config/: CMakeLists.txt  ws.backbone.laview.object-example.gschema.xml
cpack/: CMakeLists.txt
po/: laview-object-example.pot
po/ru/: laview-object-example.po
src/: CMakeLists.txt
src/laview-core/: CMakeLists.txt
src/laview-core/object-plugins/: AppDirs.vala  CMakeLists.txt  ObjectDialog.vala  PreferencesDialog.vala  Settings.vala  main.vala
ui/glade/: laview-object-example.glade
