PROJECT (LAviewObjectExample C)

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (PROJECT_LOWERCASE_NAME "laview-object-example")
SET (PROJECT_DESCRIPTION "LAview Plugin Protocol Object Example.")

SET (MAJOR 0)
SET (MINOR 0)
SET (PATCH 0)

LIST (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/backbone)

ADD_SUBDIRECTORY (config)
ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (po)
ADD_SUBDIRECTORY (test)
ADD_SUBDIRECTORY (cpack)
ADD_SUBDIRECTORY (ui)

# enable testing
ENABLE_TESTING ()
